# Simple_SPMV

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: spmv_coo_kernel.h  spmv_cpu_kernel.h  spmv_csr_kernel.h  spmv_dia_kernel.h  spmv_ell_kernel.h  spmv_gpu_kernel.h  spmv_naive_kernel.h  utils.h
src/: CMakeLists.txt  main.cpp  test_cpu.cpp  test_dia.cpp  test_dia.cu  test_segment.cpp  v0_cpu_naive.cpp  v1_cuda_DIA.cu  v3_cuda_CSR.cu  v4_cuda_COO.cu
src/cuda/: CMakeLists.txt  k2_cuda_ELL_v00.cu  test_all.cpp  test_dia.cpp  test_segment.cpp
